k8s/testing/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testing-legends-tournaments
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: legends-tournaments.appspot.com
    http:
      paths:
      - path: /
        backend:
          serviceName: testing-legends-tournaments
          servicePort: 80
  tls:
  - secretName: wildcard-tls
